# arpy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  arpy.py  pyproject.toml  renovate.json  vulture_whitelist.py
.github/ISSUE_TEMPLATE/: bug-report-🐞.md  feature-suggestion-💡.md
.github/codeql/: codeql-config.yml
.github/workflows/: CI.yml
test/: __init__.py  test_bsd.py  test_contents.py  test_failures.py  test_gnu.py  test_normal.py  test_thin.py
test/samples/: bsd_multi_names.ar  gnu_single_name_64.ar
