#:schema https://json.schemastore.org/pyproject.json

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0.0"]

[project]
authors = [
  { name = "Stanisław Pitucha", email = "viraptor@gmail.com" },
  { name = "ONEKEY", email = "support@onekey.com" },
]

dependencies = []
description = "Library for accessing 'ar' files"
license = "BSD-2-Clause"
name = "arpy"
readme = "README.md"
requires-python = ">=3.10"
version = "2.3.0"

[tool.setuptools]
py-modules = ["arpy"]

[dependency-groups]
dev = [
  "pre-commit>=3.5,<5.0",
  "pyright>=1.1.349",
  "pytest-cov>=3,<7",
  "pytest>=9.0.3",
  "pyyaml>=6.0.1",
  "ruff==0.9.9",
  "taplo>=0.9.3",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
  "A",      # flake8-builtins
  "ARG",    # flake8-unused-arguments
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "C90",    # mccabe
  "COM818", # flake8-commas; trailing-comma-on-bare-tuple
  "D",      # pydocstyle
  "E",      # pycodestyle (errors)
  "F",      # pyflakes
  "FBT",    # flake8-boolean-trap
  "G",      # flake8-logging-format
  "I",      # isort
  "N",      # pep8-naming
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # ruff's own lints
  "S",      # flake8-bandit
  "SIM",    # flake8-simplify
  "SLF",    # flake8-self
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TID251", # flake8-tidy-imports; banned-api
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "W",      # pycodestyle (warnings)
]

ignore = [
  "B027",    # empty-method-without-abstract-decorator: It is okay to have empty methods in abstract classes
  "D1",      # undocumented-*:                          We are not documenting every public symbol
  "D203",    # one-blank-line-before-class:             D211 (no-blank-line-before-class) is used instead
  "D213",    # multi-line-summary-second-line:          D212 (multi-line-summary-first-line) is used instead
  "E501",    # line-too-long:                           Let black handle line length violations
  "N818",    # error-suffix-on-exception-name:          Exception names can be meaningful without smurfs
  "PLC0414", # useless-import-alias:                    Enable explicitly re-exporting public symbols
  "PLR09",   # too-many-{arguments,branches,...}:       We do not want to impose hard limits
  "PTH201",  # path-constructor-current-directory:      Having "." explicitly passed expresses intent more clearly
  "RUF012",  # mutable-class-default:                   Wants to annotate things like `Handler.PATTERNS` with `ClassVar`, producing noise
  "S101",    # assert:                                  Enable usage of asserts
  "S603",    # subprocess-without-shell-equals-true:    This check just highlights, that we should check for untrusted inputs
  "S607",    # start-process-with-partial-path:         In our case, the convenience of allowing partial paths outweighs the risks
  "TRY003",  # raise-vanilla-args:                      We are adding contextual information in exception messages
  "TRY400",  # error-instead-of-exception:              It is okay to log without backtrace in except blocks
]

# Do not remove unused imports automatically in __init__.py files
ignore-init-module-imports = true

[tool.ruff.lint.per-file-ignores]
".github/*" = [
  "T201", # print
]
"tests/*" = [
  "FBT001", # boolean-positional-arg-in-function-definition: allowed in `pytest.param()`
  "FBT003", # boolean-positional-value-in-function-call:     allowed test parameters
]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true # code like `dict(a=1, b=2)` is allowed

[tool.ruff.lint.isort]
known-first-party = ["arpy"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
allow-magic-value-types = [
  "bytes",
  "int",   # bunch of ad-hoc bitmask values
  "str",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "csv"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"attr".msg = "Use `attrs` (with an 's') instead"

[tool.pytest.ini_options]
addopts = "--cov=arpy --cov=tests --cov-branch --cov-fail-under=90"
norecursedirs = """
  *.egg
  *_extract
  .*
  dist
  build
  target
  tests
"""

[tool.coverage.paths]
source = ["tests", "arpy"]

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
parallel = true
sigterm = true
source = ["tests", "arpy"]

[tool.coverage.report]
fail_under = 90
skip_covered = true

[tool.vulture]
exclude = []
paths = ["arpy.py", "vulture_whitelist.py"]

[tool.pyright]
exclude = [".venv", "build"]
typeCheckingMode = "standard"
